--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,6 +3,8 @@ minSdk = "28"
 targetSdk = "36"
 compileSdk = "36"
 
+jdk = "21"
+
 activity-compose = "1.11.0"
 androidGradlePlugin = "8.13.1"
 androidxTestRules = "1.7.0"
