--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,7 +13,7 @@ compose-bom = "2025.11.01"
 composable-preview-scanner = "0.7.1"
 composeRules = "0.4.27"
 hilt = "2.57.2"
-hiltLifecycleViewmodelCompose = "1.3.0"
+hilt-navigation-compose = "1.3.0"
 junit = "4.13.2"
 kotlin = "2.2.21"
 kotlinx-collections-immutable = "0.4.0"
@@ -48,7 +48,7 @@ composable-preview-scanner-android = { group = "io.github.sergio-sastre.Composab
 composeRules = { group = "io.nlopez.compose.rules", name = "ktlint", version.ref = "composeRules" }
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
 hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "hilt" }
-hilt-navigation-compose = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "hiltLifecycleViewmodelCompose" }
+hilt-navigation-compose = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "hilt-navigation-compose" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 kotlin-test-junit = { group = "org.jetbrains.kotlin", name = "kotlin-test-junit", version.ref = "kotlin" }
 kotlinx-collections-immutable = { group = "org.jetbrains.kotlinx", name = "kotlinx-collections-immutable", version.ref = "kotlinx-collections-immutable" }
