--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,7 +10,6 @@ agp = "8.13.1"
 androidxTestRules = "1.7.0"
 browser = "1.9.0"
 compose-bom = "2025.11.01"
-composable-preview-scanner = "0.7.1"
 composeRules = "0.4.27"
 hilt = "2.57.2"
 hilt-navigation-compose = "1.3.0"
@@ -25,6 +24,7 @@ lifecycle = "2.10.0"
 markdown = "0.7.3"
 napier = "2.7.1"
 navigation-compose = "2.9.6"
+preview-scanner = "0.7.1"
 robolectric = "4.16"
 roborazzi = "1.51.0"
 spotless = "8.1.0"
@@ -44,7 +44,6 @@ compose-ui = { group = "androidx.compose.ui", name = "ui" }
 compose-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
 compose-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
-composable-preview-scanner-android = { group = "io.github.sergio-sastre.ComposablePreviewScanner", name = "android", version.ref = "composable-preview-scanner" }
 composeRules = { group = "io.nlopez.compose.rules", name = "ktlint", version.ref = "composeRules" }
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
 hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "hilt" }
@@ -61,6 +60,7 @@ lifecycle-viewModel-compose = { group = "androidx.lifecycle", name = "lifecycle-
 markdown = { group = "org.jetbrains", name = "markdown", version.ref = "markdown" }
 napier = { group = "io.github.aakira", name = "napier", version.ref = "napier" }
 navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigation-compose" }
+preview-scanner = { group = "io.github.sergio-sastre.ComposablePreviewScanner", name = "android", version.ref = "preview-scanner" }
 robolectric = { group = "org.robolectric", name = "robolectric", version.ref = "robolectric" }
 roborazzi = { group = "io.github.takahirom.roborazzi", name = "roborazzi", version.ref = "roborazzi" }
 roborazzi-compose-preview-scanner-support = { group = "io.github.takahirom.roborazzi", name = "roborazzi-compose-preview-scanner-support", version.ref = "roborazzi" }
