--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -23,7 +23,7 @@ ktlint-compose-rules = "0.4.27"
 lifecycle = "2.10.0"
 markdown = "0.7.3"
 napier = "2.7.1"
-navigation-compose = "2.9.6"
+navigation2 = "2.9.6"
 navigation3 = "1.0.0"
 preview-scanner = "0.7.1"
 robolectric = "4.16"
@@ -60,7 +60,7 @@ lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-
 lifecycle-viewmodel-navigation3 = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-navigation3", version.ref = "lifecycle" }
 markdown = { group = "org.jetbrains", name = "markdown", version.ref = "markdown" }
 napier = { group = "io.github.aakira", name = "napier", version.ref = "napier" }
-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigation-compose" }
+navigation2 = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigation2" }
 navigation3-runtime = { group = "androidx.navigation3", name = "navigation3-runtime", version.ref = "navigation3" }
 navigation3-ui = { group = "androidx.navigation3", name = "navigation3-ui", version.ref = "navigation3" }
 preview-scanner = { group = "io.github.sergio-sastre.ComposablePreviewScanner", name = "android", version.ref = "preview-scanner" }
