style: update Kotlin imports layout configuration

--- a/.editorconfig
+++ b/.editorconfig
@@ -2,6 +2,7 @@
 compose_allowed_composition_locals = LocalSnackbarHostState
 ij_kotlin_allow_trailing_comma = true
 ij_kotlin_allow_trailing_comma_on_call_site = true
+ij_kotlin_imports_layout = *,java.**,javax.**,kotlin.**,^
 ij_kotlin_indent_before_arrow_on_new_line = true
 ktlint_code_style = android_studio
 ktlint_experimental = enabled
