--- a/renovate.json
+++ b/renovate.json
@@ -3,6 +3,17 @@
   "extends": [
     "config:recommended"
   ],
+  "customManagers": [
+    {
+      "customType": "regex",
+      "managerFilePatterns": [
+        "/^gradle/spotless-init\\.gradle\\.kts$/"
+      ],
+      "matchStrings": [
+        "// renovate: datasource=(?<datasource>.+?) depName=(?<depName>.+?)\n\\s*val ([a-zA-Z0-9_]*)Version = \"(?<currentValue>.+?)\"\n"
+      ]
+    }
+  ],
   "ignoreDeps": [
     "buildlogic.android.application",
     "buildlogic.android.library",
